# generic-persistence

./: Cargo.toml
src/: lib.rs
