[package]
name = "generic-persistence"
version = "0.1.0"
authors = ["Benno Rice <benno.rice@artprocessors.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4"] }
